2009-11-04

- Removed search types due to awesome support for search types on GitHub
  directly http://github.com/search.

2009-01-22

- Added support for repository search.
- Now making use of the new, better, GitHub search types.

2008-11-03

- Added support for new code-search: http://github.com/codesearch