@@ -1,4 +1,4 @@
-Copyright (c) 2008 Douglas Shearer
+Copyright (c) 2008 - 2011 Douglas Shearer
  
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
