@@ -1,3 +1,7 @@
+2011-03-15
+
+- Can now go directly to a repository page when a user/repository path is entered.
+
 2009-11-04
 
 - Removed search types due to awesome support for search types on GitHub
